--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   /* background-color: white; */
   /* border: 1px solid white; */
+  font-size: 13px;
   color: white !important;
 }
 a {
