--- a/style.css
+++ b/style.css
@@ -41,8 +41,10 @@ h1 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   /* background-color: white; */
   /* border: 1px solid white; */
-  font-size: 13px;
   color: white !important;
+}
+h1{
+  font-size:13px;
 }
 a {
   color: white;
